# spacedreppy

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  justfile  pyproject.toml
.github/: copilot-instructions.md  release-drafter.yml
.github/workflows/: auto-release.yml  build.yml  greetings.yml  publish.yml  release-drafter.yml
spacedreppy/: __init__.py
spacedreppy/schedulers/: __init__.py  fsrs.py  leitner.py  sm2.py  spaced_repetition_scheduler.py
tests/: __init__.py  test_fsrs.py  test_leitner.py  test_sm2.py
