[project]
name = "spacedreppy"
version = "0.1.2"
description = "A spaced repetition Python library."
authors = [
    { name = "Louis Schlessinger", email = "2996982+lschlessinger1@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["Spaced-repetition"]
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "coverage-badge>=1.1.0",
    "bandit>=1.7.1",
    "pre-commit>=4.2.0",
    "ruff>=0.9.0",
    "mypy>=1.0",
    "mypy-extensions>=1.0.0",
    "pyupgrade>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# https://docs.astral.sh/ruff/
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle (replaces darglint)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]  # Don't require docstrings in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["spacedreppy"]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.9
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
    "--strict-markers",
    "--tb=short",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "spacedreppy"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
